# bitcoin-core-nightly

./: CMakeUserPresets.json  README.md  flake.nix
.github/workflows/: build-and-test.yml  ci.yml  claude.yml  continuous-build.yml  linux-ci.yml  nightly-build.yml  nix-ci.yml  nix.yml
debug/: ranlib-empty-darwin.sh
scripts/: build-unit-test.cmake  dump-cmake-configure-log.cmake  dump-ctest-build-log.cmake  set-cdash-build-name.cmake  write-build-config-note.cmake
scripts/functional-ctest/: CMakeLists.txt  generate-functional-tests.py
